--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -23,13 +23,11 @@
     "id": "LNKxYBmiLxsM"
    },
    "source": [
-    "import os\n",
     "import nltk\n",
     "import spacy\n",
     "from nltk import Tree\n",
     "from nltk.corpus import wordnet\n",
     "from nltk.stem import PorterStemmer\n",
-    "\n",
     "\n",
     "ps = PorterStemmer()\n",
     "\n",
@@ -64,7 +62,6 @@
     "            for lemma in holo.lemma_names():\n",
     "                synset['holonym'] += lemma+','\n",
     "    return synset\n",
-    "\n",
     "\n",
     "def dependency_parse_tree(sentence):\n",
     "    en_nlp = spacy.load('en_core_web_sm')\n",
@@ -194,14 +191,13 @@
     "                                 \"children\":[[child.text+\"-\"+child.pos_,child.dep_] for child in words.children]}\n",
     "            synset[words.text] = wordnet_features(words.text)\n",
     "\n",
-    "\n",
     "        tokens.append(token)\n",
     "        lemmas.append(lemma)\n",
     "        stems.append(stem)\n",
     "        pos_tag.append(pos)\n",
     "        dependency_parser.append(parser)\n",
     "        relations.append(synset)\n",
-    "        if(not sent.text.isspace() and len(sent.text.split()) > 1):\n",
+    "        if not sent.text.isspace() and len(sent.text.split()) > 1:\n",
     "            parse_tree.append(dependency_parse_tree(sent.text))"
    ],
    "execution_count": 73,
@@ -213,7 +209,7 @@
     "id": "77wt4o8zfOjO"
    },
    "source": [
-    "# mkdir output\n"
+    "# mkdir output"
    ],
    "execution_count": 74,
    "outputs": []
@@ -228,7 +224,7 @@
     "outputId": "b5400df2-f364-445b-eb33-6c884be33db1"
    },
    "source": [
-    "# cd output\n"
+    "# cd output"
    ],
    "execution_count": 75,
    "outputs": []
@@ -240,7 +236,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "ka14Kv2xL49o",
-    "outputId": "49056a4a-c0b9-47a5-d357-529dac50a655"
+    "outputId": "49056a4a-c0b9-47a5-d357-529dac50a655",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "source": [
     "print(\"Features are extracted as List. Now storing as text files\")\n",
@@ -267,8 +266,7 @@
     "    f.writelines(\"%s\\n\" % i for i in parse_tree)\n",
     "\n",
     "with open('Output/wordnet_relations.txt', 'w', encoding='utf-8') as f:\n",
-    "    f.writelines(\"%s\\n\" % i for i in relations)\n",
-    "    \n"
+    "    f.writelines(\"%s\\n\" % i for i in relations)"
    ],
    "execution_count": 76,
    "outputs": [
@@ -280,17 +278,6 @@
      ]
     }
    ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "-o3ttem5ndZ1"
-   },
-   "source": [
-    ""
-   ],
-   "execution_count": 76,
-   "outputs": []
   }
  ]
 }
