avoid shadowed names

--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -41,27 +41,27 @@
     "parse_tree = []\n",
     "\n",
     "def wordnet_features(word):\n",
-    "    synset = {'synonym':'', 'hypernym':'','hyponym':'','meronym':'','holonym':''}\n",
+    "    synset_ = {'synonym':'', 'hypernym':'','hyponym':'','meronym':'','holonym':''}\n",
     "    for syn in wordnet.synsets(word):\n",
     "        for l in syn.lemmas():\n",
-    "            synset['synonym'] += l.name()+','\n",
+    "            synset_['synonym'] += l.name()+','\n",
     "        \n",
     "        for hyper in syn.hypernyms():\n",
-    "            for lemma in hyper.lemma_names():\n",
-    "                synset['hypernym'] += lemma+','\n",
+    "            for lemma_ in hyper.lemma_names():\n",
+    "                synset_['hypernym'] += lemma_+','\n",
     "        \n",
     "        for hypo in syn.hyponyms():\n",
-    "            for lemma in hypo.lemma_names():\n",
-    "                synset['hyponym'] += lemma+','\n",
+    "            for lemma_ in hypo.lemma_names():\n",
+    "                synset_['hyponym'] += lemma_+','\n",
     "        \n",
     "        for mero in syn.part_meronyms():\n",
-    "            for lemma in mero.lemma_names():\n",
-    "                synset['meronym'] += lemma+','\n",
+    "            for lemma_ in mero.lemma_names():\n",
+    "                synset_['meronym'] += lemma_+','\n",
     "                \n",
     "        for holo in syn.part_holonyms():\n",
-    "            for lemma in holo.lemma_names():\n",
-    "                synset['holonym'] += lemma+','\n",
-    "    return synset\n",
+    "            for lemma_ in holo.lemma_names():\n",
+    "                synset_['holonym'] += lemma_+','\n",
+    "    return synset_\n",
     "\n",
     "def dependency_parse_tree(sentence):\n",
     "    en_nlp = spacy.load('en_core_web_sm')\n",
@@ -73,13 +73,13 @@
     "        else:\n",
     "            return node.orth_\n",
     "    \n",
-    "    tree = [to_nltk_tree(sent.root) for sent in doc.sents]\n",
+    "    tree = [to_nltk_tree(sent_.root) for sent_ in doc.sents]\n",
     "    # [to_nltk_tree(sent.root).pretty_print() for sent in doc.sents]\n",
     "    return tree[0]\n",
     "\n",
     "sp = spacy.load('en_core_web_sm')"
    ],
-   "execution_count": 70,
+   "execution_count": 1,
    "outputs": []
   },
   {
@@ -94,7 +94,7 @@
    "source": [
     "nltk.download('wordnet')"
    ],
-   "execution_count": 71,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stderr",
@@ -109,7 +109,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 71,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
     "# from google.colab import files\n",
     "# uploaded = files.upload()"
    ],
-   "execution_count": 72,
+   "execution_count": 3,
    "outputs": []
   },
   {
@@ -200,7 +200,7 @@
     "        if not sent.text.isspace() and len(sent.text.split()) > 1:\n",
     "            parse_tree.append(dependency_parse_tree(sent.text))"
    ],
-   "execution_count": 73,
+   "execution_count": 4,
    "outputs": []
   },
   {
@@ -211,7 +211,7 @@
    "source": [
     "# mkdir output"
    ],
-   "execution_count": 74,
+   "execution_count": 5,
    "outputs": []
   },
   {
@@ -226,7 +226,7 @@
    "source": [
     "# cd output"
    ],
-   "execution_count": 75,
+   "execution_count": 6,
    "outputs": []
   },
   {
@@ -268,7 +268,7 @@
     "with open('Output/wordnet_relations.txt', 'w', encoding='utf-8') as f:\n",
     "    f.writelines(\"%s\\n\" % i for i in relations)"
    ],
-   "execution_count": 76,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
