--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -28,6 +28,9 @@
     "from nltk import Tree\n",
     "from nltk.corpus import wordnet\n",
     "from nltk.stem import PorterStemmer\n",
+    "from SynSetFactory import SynSetFactory\n",
+    "\n",
+    "\n",
     "\n",
     "ps = PorterStemmer()\n",
     "\n",
@@ -79,7 +82,7 @@
     "\n",
     "sp = spacy.load('en_core_web_sm')"
    ],
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": []
   },
   {
@@ -94,7 +97,7 @@
    "source": [
     "nltk.download('wordnet')"
    ],
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stderr",
@@ -109,7 +112,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +146,7 @@
     "# from google.colab import files\n",
     "# uploaded = files.upload()"
    ],
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": []
   },
   {
@@ -189,7 +192,7 @@
     "            parser[words.text] = {\"dependency\" : words.dep_,\n",
     "                                 \"parent_pos\":words.head.text+\"-\"+words.head.pos_,\n",
     "                                 \"children\":[[child.text+\"-\"+child.pos_,child.dep_] for child in words.children]}\n",
-    "            synset[words.text] = wordnet_features(words.text)\n",
+    "            synset[words.text] = SynSetFactory.create_syn_set(words.text)\n",
     "\n",
     "        tokens.append(token)\n",
     "        lemmas.append(lemma)\n",
@@ -200,8 +203,29 @@
     "        if not sent.text.isspace() and len(sent.text.split()) > 1:\n",
     "            parse_tree.append(dependency_parse_tree(sent.text))"
    ],
-   "execution_count": 4,
-   "outputs": []
+   "execution_count": 5,
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[1;32mC:\\Users\\BILLSH~1\\AppData\\Local\\Temp/ipykernel_14528/3577047872.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     37\u001B[0m                                  \u001B[1;34m\"parent_pos\"\u001B[0m\u001B[1;33m:\u001B[0m\u001B[0mwords\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mhead\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtext\u001B[0m\u001B[1;33m+\u001B[0m\u001B[1;34m\"-\"\u001B[0m\u001B[1;33m+\u001B[0m\u001B[0mwords\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mhead\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpos_\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     38\u001B[0m                                  \"children\":[[child.text+\"-\"+child.pos_,child.dep_] for child in words.children]}\n\u001B[1;32m---> 39\u001B[1;33m             \u001B[0msynset\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mwords\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtext\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mSynSetFactory\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcreate_syn_set\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mwords\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtext\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     40\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     41\u001B[0m         \u001B[0mtokens\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtoken\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\Desktop\\2021\\Repos\\Task1\\SynSetFactory.py\u001B[0m in \u001B[0;36mcreate_syn_set\u001B[1;34m(word)\u001B[0m\n\u001B[0;32m     21\u001B[0m             \u001B[1;32mfor\u001B[0m \u001B[0mmero\u001B[0m \u001B[1;32min\u001B[0m \u001B[0msyn\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpart_meronyms\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     22\u001B[0m                 \u001B[1;32mfor\u001B[0m \u001B[0mlemma_\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mmero\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlemma_names\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 23\u001B[1;33m                     \u001B[0msynset_\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'meronym'\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m+=\u001B[0m \u001B[0mlemma_\u001B[0m \u001B[1;33m+\u001B[0m \u001B[1;34m','\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     24\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     25\u001B[0m             \u001B[1;32mfor\u001B[0m \u001B[0mholo\u001B[0m \u001B[1;32min\u001B[0m \u001B[0msyn\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpart_holonyms\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\Desktop\\2021\\Repos\\Task1\\SynSetFactory.py\u001B[0m in \u001B[0;36mcreate_syn_set\u001B[1;34m(word)\u001B[0m\n\u001B[0;32m     21\u001B[0m             \u001B[1;32mfor\u001B[0m \u001B[0mmero\u001B[0m \u001B[1;32min\u001B[0m \u001B[0msyn\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpart_meronyms\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     22\u001B[0m                 \u001B[1;32mfor\u001B[0m \u001B[0mlemma_\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mmero\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlemma_names\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 23\u001B[1;33m                     \u001B[0msynset_\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'meronym'\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m+=\u001B[0m \u001B[0mlemma_\u001B[0m \u001B[1;33m+\u001B[0m \u001B[1;34m','\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     24\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     25\u001B[0m             \u001B[1;32mfor\u001B[0m \u001B[0mholo\u001B[0m \u001B[1;32min\u001B[0m \u001B[0msyn\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpart_holonyms\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx\u001B[0m in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.SafeCallWrapper.__call__\u001B[1;34m()\u001B[0m\n",
+      "\u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx\u001B[0m in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "\u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx\u001B[0m in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "\u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx\u001B[0m in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "\u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_38_64.pyx\u001B[0m in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_38_64.PyDBFrame.do_wait_suspend\u001B[1;34m()\u001B[0m\n",
+      "\u001B[1;32m~\\AppData\\Local\\JetBrains\\Toolbox\\apps\\PyCharm-P\\ch-0\\203.7717.81\\plugins\\python\\helpers\\pydev\\pydevd.py\u001B[0m in \u001B[0;36mdo_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[0;32m   1139\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1140\u001B[0m         \u001B[1;32mwith\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_threads_suspended_single_notification\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mnotify_thread_suspended\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mthread_id\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mstop_reason\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 1141\u001B[1;33m             \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_do_wait_suspend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mthread\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mframe\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mevent\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0marg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0msuspend_type\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mfrom_this_thread\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m   1142\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1143\u001B[0m     \u001B[1;32mdef\u001B[0m \u001B[0m_do_wait_suspend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mthread\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mframe\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mevent\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0marg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0msuspend_type\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mfrom_this_thread\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\AppData\\Local\\JetBrains\\Toolbox\\apps\\PyCharm-P\\ch-0\\203.7717.81\\plugins\\python\\helpers\\pydev\\pydevd.py\u001B[0m in \u001B[0;36m_do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[0;32m   1154\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1155\u001B[0m                 \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mprocess_internal_commands\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 1156\u001B[1;33m                 \u001B[0mtime\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msleep\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m0.01\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m   1157\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1158\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcancel_async_evaluation\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mget_current_thread_id\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mthread\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mid\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mframe\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ]
   },
   {
    "cell_type": "code",
@@ -211,7 +235,7 @@
    "source": [
     "# mkdir output"
    ],
-   "execution_count": 5,
+   "execution_count": 12,
    "outputs": []
   },
   {
@@ -226,7 +250,7 @@
    "source": [
     "# cd output"
    ],
-   "execution_count": 6,
+   "execution_count": 13,
    "outputs": []
   },
   {
@@ -268,7 +292,7 @@
     "with open('Output/wordnet_relations.txt', 'w', encoding='utf-8') as f:\n",
     "    f.writelines(\"%s\\n\" % i for i in relations)"
    ],
-   "execution_count": 7,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
